samples/_failures_safe/1761501984_7ab222_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40382eec.c: In function ‘free_graph’:
./samples/SAFE/__tmp_40382eec.c:177:9: error: expected ‘{’ at end of input
  177 |         struct
      |         ^~~~~~
./samples/SAFE/__tmp_40382eec.c:177:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_40382eec.c:177:9: error: expected declaration or statement at end of input
